# orange-sky

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  README.md  main.py
api/tests/: conftest.py  test_endpoints.py
data/snapshot/2020-labor-day/: event.json  fires.json  historic.json  monitors.json  smoke.json
data/snapshot/2020-labor-day/monitors_ts/: 060010007.json  060010009.json  060010011.json  060010012.json  060010013.json  060010015.json  060070008.json  060072002.json  060074001.json  060090001.json  060111002.json  060130002.json  060131004.json  060190011.json  060192008.json  060192009.json  060210003.json  060250005.json  060270002.json  060271003.json  060290014.json  060292009.json  060311004.json  (+278 more)
docs/superpowers/plans/: 2026-05-06-phase-1-data-pipeline.md  2026-05-08-phase-2-api.md
docs/superpowers/specs/: 2026-05-05-pnw-smoke-dashboard-design.md
events/: 2020-labor-day.yml
pipeline/: README.md  __init__.py  airnow.py  build.py  config.py  firms.py  fpa_fod.py  hms.py
pipeline/tests/: conftest.py  test_airnow.py  test_build.py  test_config.py  test_firms.py  test_fpa_fod.py  test_hms.py
pipeline/tests/fixtures/: airnow_sample.csv  firms_sample.csv  hms_sample.kml
scripts/: fetch_raw.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  aqi.ts  index.css  types.ts
web/src/components/: AboutPanel.tsx  EventMap.tsx  HistoricStrip.tsx  KpiRail.tsx  PM25Chart.tsx
