[project]
name = "pnw-smoke-pipeline"
version = "0.1.0"
description = "Heterogeneous data pipeline for the PNW Smoke Response dashboard."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
  "pyyaml>=6.0",
  "fastkml>=1.0",
  "shapely>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
