[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pnw-smoke-dashboard"
version = "0.1.0"
description = "PNW Smoke Response dashboard — pipeline + API + web."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
  "pyyaml>=6.0",
  "fastkml>=1.0",
  "shapely>=2.0",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["pipeline*", "api*"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests", "api/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
